fix #2 - attributes not matching

--- a/templates/app.html
+++ b/templates/app.html
@@ -32,11 +32,11 @@
           <input id="score" name="score" type="range" min="0" max="10" value="5" oninput="scoreOutput.value = score.value" />
           <output name="scoreOutput" id="scoreOutput"> 5 </output>
 
-          <label> value score: </label>
+          <label> value for money score: </label>
           <input id="value" name="valueV" type="range" min="0" max="10" value="5" oninput="valueOutput.value = valueV.value" />
           <output name="valueOutput" id="valueOutput"> 5 </output>
 
-          <label> value for money score: </label>
+          <label> cleanliness score: </label>
           <input id="cleanliness" name="cleanliness" type="range" min="0" max="10" value="5" oninput="cleanlinessOutput.value = cleanliness.value" />
           <output name="cleanlinessOutput" id="cleanlinessOutput"> 5 </output>
 
